Finalice con la vista de las paginas principales. aun no pulo las funcionalidades.

--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -1,7 +1,77 @@
-<p>¡Hola! Hoy me presento contigo para platicarte que, cada espacio cuenta una historia, y mi misión es ayudarte a escribir la tuya. 🏡✨ </p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Acerca de - AAArchDesign</title>
+  <style>
+    .acerca-de {
+      place-self: center;
+      max-width: 900px;
+      margin: 2rem;
+      text-align: center;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    .acerca-de h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      color: #4c4c4c;
+    }
+    .acerca-de p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #555;
+      margin-bottom: 1rem;
+    }
+    .main-footer {
+      text-align: center;
+      padding: 1rem;
+      background: #f4f4f4;
+      margin-top: 3rem;
+    }
+  </style>
+</head>
+<body>
+  <header class="main-header">
+    <h1 class="logo">
+      <span>AA</span>Arch<span>Design</span>
+    </h1>
+    <nav class="main-nav">
+      <ul>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/Proyectos.html">Proyectos</a></li>
+        <li><a href="/AcercaDe.html">Acerca De</a></li>
+        <li><a href="/Contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<p>📐 Como arquitecta, sé que un buen diseño no solo transforma estructuras, sino también vidas. Desde la primera idea hasta el último detalle, estoy aquí para guiarte en cada paso y convertir tus sueños en realidad.</p>
+  <main class="acerca-de">
+    <h2>Sobre Mí</h2>
+    <p>
+      ¡Hola! Me presento contigo para contarte que cada espacio cuenta una historia, 
+      y mi misión es ayudarte a escribir la tuya. 🏡✨
+    </p>
+    <p>
+      📐 Como arquitecta, entiendo que un buen diseño no solo transforma estructuras, sino también vidas. 
+      Desde la primera idea hasta el último detalle, estoy aquí para guiarte en cada paso del camino y convertir tus sueños en realidad.
+    </p>
+    <p>
+      📌 Explora mi trabajo y descubre cómo juntos podemos crear un espacio que refleje 
+      tus necesidades y estilo de vida.
+    </p>
+    <p>
+      🌟 ¿Tienes un proyecto en mente? Escríbeme, estoy aquí para ayudarte a hacerlo realidad.
+    </p>
+  </main>
 
-<p>📌 Desliza para conocer más sobre mi trabajo y cómo juntos podemos crear un espacio que refleje tus necesidades y estilo. </p>
-
-<p>🌟 ¿Tienes un proyecto en mente? Escríbeme, estoy aquí para ayudarte a hacerlo realidad.</p>
+  <footer class="main-footer">
+    <p>&copy; 2025 AAArchDesign. Todos los derechos reservados.</p>
+  </footer>
+</body>
+</html>
