--- a/index.html
+++ b/index.html
@@ -52,13 +52,31 @@
       <div class="carrusel" id="carrusel">
         <!-- Carrusel con imágenes de tus últimos proyectos -->
         <div class="slide">
-          <img src="assets/proyecto1.png" alt="Proyecto 1" />
+          <img src="Proyectos/proyecto1.jpg" alt="Proyecto 1" />
         </div>
         <div class="slide">
-          <img src="assets/proyecto2.png" alt="Proyecto 2" />
+          <img src="Proyectos/proyecto2.jpg" alt="Proyecto 2" />
         </div>
         <div class="slide">
-          <img src="assets/proyecto3.png" alt="Proyecto 3" />
+          <img src="Proyectos/proyecto3.jpg" alt="Proyecto 3" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto4.jpg" alt="Proyecto 4" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto5.jpg" alt="Proyecto 5" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto6.jpg" alt="Proyecto 6" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto7.jpg" alt="Proyecto 7" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto8.jpg" alt="Proyecto 8" />
+        </div>
+        <div class="slide">
+          <img src="Proyectos/proyecto9.jpg" alt="Proyecto 9" />
         </div>
       </div>
       <div class="controles-carrusel">
