modifique los enlaces en las paginas principales

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="/">Inicio</a></li>
-        <li><a href="/Proyectos.html">Proyectos</a></li>
-        <li><a href="/AcercaDe.html">Acerca De</a></li>
-        <li><a href="/Contacto.html">Contacto</a></li>
+        <li><a href="aaarchdesign/">Inicio</a></li>
+        <li><a href="aaarchdesign/Proyectos.html">Proyectos</a></li>
+        <li><a href="aaarchdesign/AcercaDe.html">Acerca De</a></li>
+        <li><a href="aaarchdesign/Contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
