Ya consulte con chatGPT y creo que asi estan bien los enlaces jaja

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="/">Inicio</a></li>
-        <li><a href="/Proyectos.html">Proyectos</a></li>
-        <li><a href="/AcercaDe.html">Acerca De</a></li>
-        <li><a href="/Contacto.html">Contacto</a></li>
+        <li><a href="./">Inicio</a></li>
+        <li><a href="./Proyectos.html">Proyectos</a></li>
+        <li><a href="./AcercaDe.html">Acerca De</a></li>
+        <li><a href="./Contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -117,7 +117,7 @@
           ¿Listo para comenzar tu proyecto? Envíame un correo a través de este
           formulario:
         </p>
-        <a href="/Contacto.html" class="btn-contacto">Ir al formulario</a>
+        <a href="./Contacto.html" class="btn-contacto">Ir al formulario</a>
       </div>
       <div class="redes-sociales">
         <a href="https://www.facebook.com/profile.php?id=100071973511901"
@@ -137,6 +137,6 @@
     <p>© 2025 AAArchDesign. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
