--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="carrusel" id="carrusel">
         <!-- Carrusel con imágenes de tus últimos proyectos -->
         <div class="slide">
-          <img src="Proyectos/proyecto1.jpg" alt="Proyecto 1" />
+          <img src="Proyectos/proyecto1.JPG" alt="Proyecto 1" />
         </div>
         <div class="slide">
           <img src="Proyectos/proyecto2.jpg" alt="Proyecto 2" />
