Enlazar y generar dinamicamente las imagenes del primer proyecto del portafolio y dar los estilos necesarios

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -30,103 +30,105 @@
   <!-- Contenido principal -->
   <main>
     <section class="tarjetas-proyectos">
+
       <!-- Tarjeta 1 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto1.jpg" alt="Proyecto 1">
-        <h3>Proyecto 1</h3>
+      <a href="./Proyectos/proyecto1.html" class="card">
+        <img src="assets/proyectos/proyecto1.jpg" alt="Casa Hab. - Roel & Laura">
+        <h3>Casa Hab. - Roel & Laura</h3>
         <p>Breve descripción del proyecto 1.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 2 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto2.jpg" alt="Proyecto 2">
-        <h3>Proyecto 2</h3>
+      <a href="proyecto2.html" class="card">
+        <img src="assets/proyectos/proyecto2.jpg" alt="España - Inglaterra">
+        <h3>España - Inglaterra</h3>
         <p>Breve descripción del proyecto 2.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 3 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto3.jpg" alt="Proyecto 3">
-        <h3>Proyecto 3</h3>
+      <a href="proyecto3.html" class="card">
+        <img src="assets/proyectos/proyecto3.jpg" alt="Argentina">
+        <h3>Argentina</h3>
         <p>Breve descripción del proyecto 3.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 4 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto4.jpg" alt="Proyecto 4">
-        <h3>Proyecto 4</h3>
+      <a href="proyecto4.html" class="card">
+        <img src="assets/proyectos/proyecto4.jpg" alt="Valle del Sol">
+        <h3>Valle del Sol</h3>
         <p>Breve descripción del proyecto 4.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 5 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto5.jpg" alt="Proyecto 5">
-        <h3>Proyecto 5</h3>
+      <a href="proyecto5.html" class="card">
+        <img src="assets/proyectos/proyecto5.jpg" alt="Remodelacion de Fachada - Cristy C.">
+        <h3>Remodelacion de Fachada - Cristy C.</h3>
         <p>Breve descripción del proyecto 5.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 6 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto6.jpg" alt="Proyecto 6">
-        <h3>Proyecto 6</h3>
+      <a href="proyecto6.html" class="card">
+        <img src="assets/proyectos/proyecto6.jpg" alt="Depa - PROGA">
+        <h3>Depa - PROGA</h3>
         <p>Breve descripción del proyecto 6.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 7 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto7.jpg" alt="Proyecto 7">
-        <h3>Proyecto 7</h3>
+      <a href="proyecto7.html" class="card">
+        <img src="assets/proyectos/proyecto7.jpg" alt="Quinta - Salon">
+        <h3>Quinta - Salon</h3>
         <p>Breve descripción del proyecto 7.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 8 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto8.jpg" alt="Proyecto 8">
-        <h3>Proyecto 8</h3>
+      <a href="proyecto8.html" class="card">
+        <img src="assets/proyectos/proyecto8.jpg" alt="Cienega de Flores">
+        <h3>Cienega de Flores</h3>
         <p>Breve descripción del proyecto 8.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 9 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto9.jpg" alt="Proyecto 9">
-        <h3>Proyecto 9</h3>
+      <a href="proyecto9.html" class="card">
+        <img src="assets/proyectos/proyecto9.jpg" alt="Plafon Abraham">
+        <h3>Plafon Abraham</h3>
         <p>Breve descripción del proyecto 9.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 10 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto10.jpg" alt="Proyecto 10">
-        <h3>Proyecto 10</h3>
+      <a href="proyecto10.html" class="card">
+        <img src="assets/proyectos/proyecto10.jpg" alt="Proyecto Mora">
+        <h3>Proyecto Mora</h3>
         <p>Breve descripción del proyecto 10.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 11 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto11.jpg" alt="Proyecto 11">
-        <h3>Proyecto 11</h3>
+      <a href="proyecto11.html" class="card">
+        <img src="assets/proyectos/proyecto11.jpg" alt="Proyecto Aldama">
+        <h3>Proyecto Aldama</h3>
         <p>Breve descripción del proyecto 11.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 12 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto12.jpg" alt="Proyecto 12">
-        <h3>Proyecto 12</h3>
+      <a href="proyecto12.html" class="card">
+        <img src="assets/proyectos/proyecto12.jpg" alt="Gallos Fresa">
+        <h3>Gallos Fresa</h3>
         <p>Breve descripción del proyecto 12.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 13 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto13.jpg" alt="Proyecto 13">
-        <h3>Proyecto 13</h3>
+      <a href="proyecto13.html" class="card">
+        <img src="assets/proyectos/proyecto13.jpg" alt="Proyecto Nogal - SH">
+        <h3>Proyecto Nogal - SH</h3>
         <p>Breve descripción del proyecto 13.</p>
-      </div>
+      </a>
 
       <!-- Tarjeta 14 -->
-      <div class="card">
-        <img src="assets/proyectos/proyecto14.jpg" alt="Proyecto 14">
-        <h3>Proyecto 14</h3>
+      <a href="proyecto14.html" class="card">
+        <img src="assets/proyectos/proyecto14.jpg" alt="Remodelacion Fachada - Chapa Ruiz">
+        <h3>Remodelacion Fachada - Chapa Ruiz</h3>
         <p>Breve descripción del proyecto 14.</p>
-      </div>
+      </a>
+
     </section>
   </main>
 
