ligeros cambios en los estilos

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -33,7 +33,7 @@
 
       <!-- Tarjeta 1 -->
       <a href="./Proyectos/proyecto1.html" class="card">
-        <img src="assets/proyectos/proyecto1.jpg" alt="Casa Hab. - Roel & Laura">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/CasaHab-Roel%26Laura/alberca.jpg" alt="Casa Hab. - Roel & Laura">
         <h3>Casa Hab. - Roel & Laura</h3>
         <p>Breve descripción del proyecto 1.</p>
       </a>
