--- a/Proyectos.html
+++ b/Proyectos.html
@@ -33,14 +33,14 @@
 
       <!-- Tarjeta 1 -->
       <a href="./Proyectos/proyecto1.html" class="card">
-        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/CasaHab-EspanaInglaterra/RENDER+1.jpg" alt="Casa Hab. - Roel & Laura">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/CasaHab-Roel%26Laura/alberca.jpg" alt="Casa Hab. - Roel & Laura">
         <h3>Casa Hab. - Roel & Laura</h3>
         <p>Breve descripción del proyecto 1.</p>
       </a>
 
       <!-- Tarjeta 2 -->
       <a href="./Proyectos/proyecto2.html" class="card">
-        <img src="assets/proyectos/proyecto2.jpg" alt="España - Inglaterra">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/CasaHab-EspanaInglaterra/RENDER+1.jpg" alt="España - Inglaterra">
         <h3>España - Inglaterra</h3>
         <p>Breve descripción del proyecto 2.</p>
       </a>
