--- a/Proyectos.html
+++ b/Proyectos.html
@@ -46,8 +46,8 @@
       </a>
 
       <!-- Tarjeta 3 -->
-      <a href="proyecto3.html" class="card">
-        <img src="assets/proyectos/proyecto3.jpg" alt="Argentina">
+      <a href="./Proyectos/proyecto3.html" class="card">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ValleDelSol/COCINA+-+VALLE+DEL+SOL.jpg" alt="Argentina">
         <h3>Argentina</h3>
         <p>Breve descripción del proyecto 3.</p>
       </a>
