3 primeros proyectos corregidos

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -47,8 +47,8 @@
 
       <!-- Tarjeta 3 -->
       <a href="./Proyectos/proyecto3.html" class="card">
-        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ValleDelSol/COCINA+-+VALLE+DEL+SOL.jpg" alt="Argentina">
-        <h3>Argentina</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ValleDelSol/COCINA-ValleDelSol.jpg" alt="Valle del Sol">
+        <h3>Valle del Sol</h3>
         <p>Breve descripción del proyecto 3.</p>
       </a>
 
