--- a/Proyectos/proyecto3.html
+++ b/Proyectos/proyecto3.html
@@ -41,7 +41,7 @@
     <p>© 2025 AAArchDesign. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="../scripts.js"></script>
+  <!--<script src="../scripts.js"></script>-->
   <script src="../scripts-proyects/proyecto3.js"></script>
 </body>
 </html>
