--- a/Proyectos.html
+++ b/Proyectos.html
@@ -54,8 +54,8 @@
 
       <!-- Tarjeta 4 -->
       <a href="proyecto4.html" class="card">
-        <img src="assets/proyectos/proyecto4.jpg" alt="Valle del Sol">
-        <h3>Valle del Sol</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/Argentina/PROPUESTA+1+INTERIOR.jpg" alt="Argentina">
+        <h3>Argentina</h3>
         <p>Breve descripción del proyecto 4.</p>
       </a>
 
