--- a/Proyectos.html
+++ b/Proyectos.html
@@ -53,7 +53,7 @@
       </a>
 
       <!-- Tarjeta 4 -->
-      <a href="proyecto4.html" class="card">
+      <a href="./Proyectos/proyecto4.html" class="card">
         <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/Argentina/PROPUESTA+1+INTERIOR.jpg" alt="Argentina">
         <h3>Argentina</h3>
         <p>Breve descripción del proyecto 4.</p>
