--- a/Proyectos.html
+++ b/Proyectos.html
@@ -60,70 +60,70 @@
       </a>
 
       <!-- Tarjeta 5 -->
-      <a href="proyecto5.html" class="card">
+      <a href="./Proyectos/proyecto5.html" class="card">
         <img src="assets/proyectos/proyecto5.jpg" alt="Remodelacion de Fachada - Cristy C.">
         <h3>Remodelacion de Fachada - Cristy C.</h3>
         <p>Breve descripción del proyecto 5.</p>
       </a>
 
       <!-- Tarjeta 6 -->
-      <a href="proyecto6.html" class="card">
+      <a href="./Proyectos/proyecto6.html" class="card">
         <img src="assets/proyectos/proyecto6.jpg" alt="Depa - PROGA">
         <h3>Depa - PROGA</h3>
         <p>Breve descripción del proyecto 6.</p>
       </a>
 
       <!-- Tarjeta 7 -->
-      <a href="proyecto7.html" class="card">
+      <a href="./Proyectos/proyecto7.html" class="card">
         <img src="assets/proyectos/proyecto7.jpg" alt="Quinta - Salon">
         <h3>Quinta - Salon</h3>
         <p>Breve descripción del proyecto 7.</p>
       </a>
 
       <!-- Tarjeta 8 -->
-      <a href="proyecto8.html" class="card">
+      <a href="./Proyectos/proyecto8.html" class="card">
         <img src="assets/proyectos/proyecto8.jpg" alt="Cienega de Flores">
         <h3>Cienega de Flores</h3>
         <p>Breve descripción del proyecto 8.</p>
       </a>
 
       <!-- Tarjeta 9 -->
-      <a href="proyecto9.html" class="card">
+      <a href="./Proyectos/proyecto9.html" class="card">
         <img src="assets/proyectos/proyecto9.jpg" alt="Plafon Abraham">
         <h3>Plafon Abraham</h3>
         <p>Breve descripción del proyecto 9.</p>
       </a>
 
       <!-- Tarjeta 10 -->
-      <a href="proyecto10.html" class="card">
+      <a href="./Proyectos/proyecto10.html" class="card">
         <img src="assets/proyectos/proyecto10.jpg" alt="Proyecto Mora">
         <h3>Proyecto Mora</h3>
         <p>Breve descripción del proyecto 10.</p>
       </a>
 
       <!-- Tarjeta 11 -->
-      <a href="proyecto11.html" class="card">
+      <a href="./Proyectos/proyecto11.html" class="card">
         <img src="assets/proyectos/proyecto11.jpg" alt="Proyecto Aldama">
         <h3>Proyecto Aldama</h3>
         <p>Breve descripción del proyecto 11.</p>
       </a>
 
       <!-- Tarjeta 12 -->
-      <a href="proyecto12.html" class="card">
+      <a href="./Proyectos/proyecto12.html" class="card">
         <img src="assets/proyectos/proyecto12.jpg" alt="Gallos Fresa">
         <h3>Gallos Fresa</h3>
         <p>Breve descripción del proyecto 12.</p>
       </a>
 
       <!-- Tarjeta 13 -->
-      <a href="proyecto13.html" class="card">
+      <a href="./Proyectos/proyecto13.html" class="card">
         <img src="assets/proyectos/proyecto13.jpg" alt="Proyecto Nogal - SH">
         <h3>Proyecto Nogal - SH</h3>
         <p>Breve descripción del proyecto 13.</p>
       </a>
 
       <!-- Tarjeta 14 -->
-      <a href="proyecto14.html" class="card">
+      <a href="./Proyectos/proyecto14.html" class="card">
         <img src="assets/proyectos/proyecto14.jpg" alt="Remodelacion Fachada - Chapa Ruiz">
         <h3>Remodelacion Fachada - Chapa Ruiz</h3>
         <p>Breve descripción del proyecto 14.</p>
