--- a/Proyectos.html
+++ b/Proyectos.html
@@ -61,14 +61,14 @@
 
       <!-- Tarjeta 5 -->
       <a href="./Proyectos/proyecto5.html" class="card">
-        <img src="assets/proyectos/proyecto5.jpg" alt="Remodelacion de Fachada - Cristy C.">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/Rem.+Fach+-+Cristy+Cobos/FACHADA+PRINCIPAL.jpg" alt="Remodelacion de Fachada - Cristy C.">
         <h3>Remodelacion de Fachada - Cristy C.</h3>
         <p>Breve descripción del proyecto 5.</p>
       </a>
 
       <!-- Tarjeta 6 -->
       <a href="./Proyectos/proyecto6.html" class="card">
-        <img src="assets/proyectos/proyecto6.jpg" alt="Depa - PROGA">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/Depa+-+PROGA/RENDER-1.jpg" alt="Depa - PROGA">
         <h3>Depa - PROGA</h3>
         <p>Breve descripción del proyecto 6.</p>
       </a>
