Listos los proyectos hasta el no13

--- a/Proyectos/proyecto8.html
+++ b/Proyectos/proyecto8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proyecto 6 | AAArchDesign</title>
+  <title>Proyecto 8 | AAArchDesign</title>
   <link rel="stylesheet" href="../style.css">
   <!-- Tipografías opcionales -->
   <link
@@ -27,7 +27,7 @@
   </header>
 
   <main>
-    <h2>Depa - PROGA</h2>
+    <h2>Cienega de Flores</h2>
     <p>Aquí puedes agregar una descripción más amplia del proyecto.</p>
 
     <!-- Galería de imágenes -->
@@ -41,6 +41,7 @@
   </footer>
 
   <!--<script src="../scripts.js"></script>-->
-  <script src="../scripts-proyects/proyecto6.js"></script>
+  <script src="../scripts-proyects/proyecto8.js"></script>
 </body>
 </html>
+
