--- a/Proyectos.html
+++ b/Proyectos.html
@@ -75,50 +75,50 @@
 
       <!-- Tarjeta 7 -->
       <a href="./Proyectos/proyecto7.html" class="card">
-        <img src="assets/proyectos/proyecto7.jpg" alt="Quinta - Salon">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/Quinta-Salon/render2.jpg" alt="Quinta - Salon">
         <h3>Quinta - Salon</h3>
         <p>Breve descripción del proyecto 7.</p>
       </a>
 
       <!-- Tarjeta 8 -->
       <a href="./Proyectos/proyecto8.html" class="card">
-        <img src="assets/proyectos/proyecto8.jpg" alt="Cienega de Flores">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/CienegaDeFlores/RENDER+-+PROYEC.+VB+-+CIENEGA+-+AA.png" alt="Cienega de Flores">
         <h3>Cienega de Flores</h3>
         <p>Breve descripción del proyecto 8.</p>
       </a>
 
       <!-- Tarjeta 9 -->
       <a href="./Proyectos/proyecto9.html" class="card">
-        <img src="assets/proyectos/proyecto9.jpg" alt="Plafon Abraham">
-        <h3>Plafon Abraham</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ProyectoMora/FACHADA+2.png" alt="Proyecto Mora">
+        <h3>Proyecto Mora</h3>
         <p>Breve descripción del proyecto 9.</p>
       </a>
 
       <!-- Tarjeta 10 -->
       <a href="./Proyectos/proyecto10.html" class="card">
-        <img src="assets/proyectos/proyecto10.jpg" alt="Proyecto Mora">
-        <h3>Proyecto Mora</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ProyectoAldama/RENDER+2+-+COCINA.psd" alt="Proyecto Aldama">
+        <h3>Proyecto Aldama</h3>
         <p>Breve descripción del proyecto 10.</p>
       </a>
 
       <!-- Tarjeta 11 -->
       <a href="./Proyectos/proyecto11.html" class="card">
-        <img src="assets/proyectos/proyecto11.jpg" alt="Proyecto Aldama">
-        <h3>Proyecto Aldama</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/GallosFresa/R4+-+EXT.png" alt="Gallos Fresa">
+        <h3>Gallos Fresa</h3>
         <p>Breve descripción del proyecto 11.</p>
       </a>
 
       <!-- Tarjeta 12 -->
       <a href="./Proyectos/proyecto12.html" class="card">
-        <img src="assets/proyectos/proyecto12.jpg" alt="Gallos Fresa">
-        <h3>Gallos Fresa</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ProyectoNogal-SH/IMG_0751.JPG" alt="Proyecto Nogal - SH">
+        <h3>Proyecto Nogal - SH</h3>
         <p>Breve descripción del proyecto 12.</p>
       </a>
 
       <!-- Tarjeta 13 -->
       <a href="./Proyectos/proyecto13.html" class="card">
-        <img src="assets/proyectos/proyecto13.jpg" alt="Proyecto Nogal - SH">
-        <h3>Proyecto Nogal - SH</h3>
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/RemFach-ChapaRuiz/render+1.png" alt="Remodelacion Fachada - Chapa Ruiz">
+        <h3>Remodelacion Fachada - Chapa Ruiz</h3>
         <p>Breve descripción del proyecto 13.</p>
       </a>
 
