Arregle una imagen y agregue el telefono en el form

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -96,7 +96,7 @@
 
       <!-- Tarjeta 10 -->
       <a href="./Proyectos/proyecto10.html" class="card">
-        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ProyectoAldama/RENDER+2+-+COCINA.psd" alt="Proyecto Aldama">
+        <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/ProyectoAldama/RENDER+1++-+MUEBLE+COCINA.jpg" alt="Proyecto Aldama">
         <h3>Proyecto Aldama</h3>
         <p>Breve descripción del proyecto 10.</p>
       </a>
@@ -120,13 +120,6 @@
         <img src="https://aaarchdesign.s3.us-east-2.amazonaws.com/RemFach-ChapaRuiz/render+1.png" alt="Remodelacion Fachada - Chapa Ruiz">
         <h3>Remodelacion Fachada - Chapa Ruiz</h3>
         <p>Breve descripción del proyecto 13.</p>
-      </a>
-
-      <!-- Tarjeta 14 -->
-      <a href="./Proyectos/proyecto14.html" class="card">
-        <img src="assets/proyectos/proyecto14.jpg" alt="Remodelacion Fachada - Chapa Ruiz">
-        <h3>Remodelacion Fachada - Chapa Ruiz</h3>
-        <p>Breve descripción del proyecto 14.</p>
       </a>
 
     </section>
