--- a/Contacto.html
+++ b/Contacto.html
@@ -80,6 +80,7 @@
     <form action="#" method="post">
       <input type="text" name="nombre" placeholder="Tu Nombre" required>
       <input type="email" name="email" placeholder="Tu Correo Electrónico" required>
+      <input type="tel" name="telefono" placeholder="Tu Teléfono" required pattern="[0-9]{10}">
       <textarea name="mensaje" rows="5" placeholder="Tu Mensaje" required></textarea>
       <button type="submit">Enviar Mensaje</button>
     </form>
