--- a/Contacto.html
+++ b/Contacto.html
@@ -84,6 +84,20 @@
       <textarea name="mensaje" rows="5" placeholder="Tu Mensaje" required></textarea>
       <button type="submit">Enviar Mensaje</button>
     </form>
+
+    <section class="contacto">
+      <h2>Contacto</h2>
+      <div class="info-contacto">
+        <p>
+          ¿Listo para comenzar tu proyecto? Envíame un correo a través de este
+          formulario:
+        </p>
+        <a href="./Contacto.html" class="btn-contacto">Ir al formulario</a>
+      </div>
+      <div class="redes-sociales">
+        <a href="https://www.facebook.com/profile.php?id=100071973511901"
+          ><img src="assets/facebook-logo.png" alt="Facebook"/></a></div>
+    </section>
   </main>
 
   <footer class="main-footer">
