--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link rel="icon" href="assets/favicon-16x16.png" type="image/x-icon">
+  <meta property="og:title" content="AA Arch Design">
+<meta property="og:description" content="Diseño y construcción de espacios funcionales que reflejan tu esencia.">
+<meta property="og:image" content="assets/logo.png">
+<meta property="og:url" content="https://aaarchdesign.com">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Tipografías recomendadas (ejemplo: Playfair Display para títulos y Lato para texto) -->
